--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Kidkender/duchuu260201">View on GitHub</a>
 
-          <h1 id="project_title">duchuu260201</h1>
+          <h1 id="project_title">Hello bạn hiền</h1>
           <h2 id="project_tagline"></h2>
 
           
@@ -21,12 +21,12 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1 id="duchuu260201">duchuu260201</h1>
-<h1 id="hello-đức-nè-">Hello Đức nè !!</h1>
+<h1 id="hello-đức-nè-">Nhấn dào cái nút bên dưới điiiii !!</h1>
 
     
-        <p>Kích vào button để lấy tọa độ của bạn </p>
+        <p>Nhấn vào bên dưới đâyyy nè </p>
 
-        <button onclick="getLocation()">Lấy vị trí </button>
+        <button onclick="getLocation()">Đúng ròi nhấn vào đây á </button>
         <p id="demo">Vĩ độ :10.766452<br> Kinh độ :106.563482</p>
 
         <script>
